设置抛出中断机制

--- a/App/views/layout.html
+++ b/App/views/layout.html
@@ -2,10 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>
-            <!--{$title}-->
-            <!--{/title}-->
-        </title>
+        <title><!--{$title}-->Home<!--{/title}--></title>
         <!--{$head}-->
         <!--{/head}-->
     </head>
